--- a/index.html
+++ b/index.html
@@ -7,14 +7,9 @@
         <meta name="viewport" content="width=device-width, initial-scale=1">
         <link rel="shortcut icon" href="Images/VickyGuptaCropped.jpg">
         <link href="Toastr/toastr.min.css" rel="stylesheet"/>
-        <script src="Toastr/toastr.min.js"></script>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
         <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta1/dist/css/bootstrap.min.css" rel="stylesheet" crossorigin="anonymous">
         <link href="Styles/myStyles.css" rel="stylesheet"/>
-        <script src="JS/jquery-1.9.1.min.js"></script>
-        <script src="JS/myScript.js"></script>
-        <script src="JS/appScript.js"></script>
-        <script src="JS/keyScript.js"></script>
     </head>
     <body>
         <div class="container shadow-lg rounded bg-white">
@@ -138,5 +133,14 @@
             </div>
             </div>
         </div>
+        <!-- <script src="http://code.jquery.com/jquery-1.9.1.min.js"></script> -->
+        <script src="JS/jquery-1.9.1.min.js"></script>
+        <script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+        <script src="Toastr/toastr.min.js"></script>
+        <script src="JS/myScript.js"></script>
+        <!-- <script src="JS/oldScript1.js"></script> -->
+        <!-- <script src="JS/oldScript1.js"></script> -->
+        <script src="JS/appScript.js"></script>
+        <script src="JS/keyScript.js"></script>
     </body>
 </html>
