--- a/index.html
+++ b/index.html
@@ -5,6 +5,16 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
+        <meta property="og:url" content="https://simplecalculator.hostman.site/">
+        <meta property="og:type" content="Static Page" />
+        <meta property="og:site_name" content="Simple Calculator" />
+        <meta property="og:title" content="Simple Calculator" />
+        <meta property="og:description" content="Simple Calculator">
+        <meta property="og:locale" content="en_IN" />
+        <meta property="og:image" content="https://simplecalculator.hostman.site/Images/Simple-Calculator.PNG">
+        <meta property="og:image:type" content="image/png" />
+        <meta property="og:image:width" content="240" />
+        <meta property="og:image:height" content="240" />
         <link rel="shortcut icon" href="Images/VickyGuptaCropped.jpg">
         <link href="Toastr/toastr.min.css" rel="stylesheet"/>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.14.0/css/all.min.css" integrity="sha512-1PKOgIY59xJ8Co8+NE6FZ+LOAZKjy+KY8iq0G4B3CyeY6wYHN3yt9PW0XpSriVlkMXe40PTKnXrLnZ9+fkDaog==" crossorigin="anonymous" />
