--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
         <meta charset="utf-8">
         <meta http-equiv="X-UA-Compatible" content="IE=edge">
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <meta property="og:url" content="https://simplecalculator.hostman.site/">
+        <meta property="og:url" content="https://vickygupta16.github.io/SimpleCalculator/">
         <meta property="og:type" content="Static Page" />
         <meta property="og:site_name" content="Simple Calculator" />
         <meta property="og:title" content="Simple Calculator" />
         <meta property="og:description" content="Simple Calculator">
         <meta property="og:locale" content="en_IN" />
-        <meta property="og:image" content="https://simplecalculator.hostman.site/Images/Simple-Calculator.PNG">
+        <meta property="og:image" content="https://vickygupta16.github.io/SimpleCalculator/Images/Simple-Calculator.PNG">
         <meta property="og:image:type" content="image/png" />
         <meta property="og:image:width" content="240" />
         <meta property="og:image:height" content="240" />
